--- a/labo06/css/style.css
+++ b/labo06/css/style.css
@@ -1,23 +1,108 @@
 body {
     font-size: 14px;
     font-family: Arial;
-   }
+}
 
-   blockquote {
+blockquote {
        font-style: italic;
-   }
-   small {
-       text-align: center;
-   }
+}
 
-   @media (max-width: 480px) {
+small {
+       text-align: center;
+}
+
+ol{
+    list-style-type:lower-alpha;
+}
+
+figcaption{
+    font-style:italic;
+    text-align:right;
+}
+
+a{
+    text-decoration:none;
+    color:black;
+}
+a .active{
+    text-decoration: underline;
+}
+
+#langmenu{
+    font-size:10px;
+}
+
+#links {
+    width: 100px;
+    padding: 10px;
+    border: 5px solid #ddd;
+}
+
+.comment{
+    color:white;
+    background-color:blue;
+    padding:5px;
+    margin: 10px, 0px, 10px, 0px
+}
+
+a:hover{
+    text-decoration:underline;
+}
+
+a:focus{
+    outline: 1px dotted #f09;
+}
+
+#profile-photo{
+    width:200px;
+    padding:10px; 
+    border: 5px solid #ddd;
+    filter:grayscale(50%);
+}
+
+#profile-photo:hover{
+    filter:grayscale(0%);
+}
+
+.intro{
+    Color:rgb(45, 238, 55);
+    font-size:80px;
+}
+
+#overmij li{
+    list-style:square;
+    list-style-type: square;
+}
+
+footer{
+    background-color:black;
+    color:orange;
+}
+
+footer a{
+    color:orangered;
+}
+
+h3{
+    columns: #999;
+}
+
+figure:not(:first-child){
+    margin-left:40px;
+}
+
+
+
+
+@media (max-width: 480px) {
        body {
            font-size: 12px;
        }
-    } 
-    @media (max-width: 800px) {
+} 
+   
+@media (max-width: 800px) {
         body {
             font-size: 16px;
         }
-     } 
+} 
    
