--- a/labo09-12/css/styles.css
+++ b/labo09-12/css/styles.css
@@ -3,8 +3,6 @@ body{
     font-size: 16px;
     color: #444;
 }
-
-
 #topbar .wrapper{
     display: flex;
 	justify-content: space-between;
@@ -23,7 +21,7 @@ body{
 	padding: 5px;
 	text-align: center;
 }
-#topbar li{
+#topbar li a{
     color: black;
 }
 #topbar label{
@@ -38,61 +36,97 @@ body{
 	box-sizing: border-box;
 	background-color: white;
 }
-
-
-
-header{
-    background-color: white;
-    padding: 25px;
-}
-h1 a {
-	font-size: 30px;
-	text-decoration: none;
-    font-family: 'Dancing Script', cursive;
-    color: #444
-}
-header.wrapper{
-    display: flex;
+header .wrapper {
+	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
 }
-
 
 header .wrapper h1 {
 	width: 32%;
 }
 
-header h1 a{
-    font-size: 50px;
-    font-family: 'Dancing Script', cursive;
-    text-decoration: none;    
+header .wrapper nav {
+	width: 22%;
+}
+header {
+	padding: px;
+}
 
+h1 a {
+	font-size: 30px;
+	text-decoration: none;
+	color: black;
+	font-family: 'Dancing Script', cursive;
 }
-header nav li{
-    display:inline;
-    font-size: 18px;
-    padding: 4px;
+
+header nav ul {
+	margin-top: 50px;
 }
-header nav li a{
-    text-decoration: none;
-    color:#444;
+
+header nav li {
+	display: inline-block;
+	font-size: 18px;
+	padding: 5px;
 }
-#banner .wrapper{
+
+header nav li a {
+	color: black;
+	text-decoration: none;
+}
+
+header nav li a:hover{
+	color: #c0627b;
+}
+
+header nav li a:active{
+	color: #c0627b;
+}
+
+main .wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+main .wrapper>div {
+	width: 23%;
+	text-align: left;
+	margin: 40px;
+	margin-top: 0;
+}
+#banner{
     color: white;
     background-image: url(../img/seoul_skyline.jpg);
     background-size: 100%;
     background-position: center;
     background-repeat: no-repeat;
     padding: 70px;
-    margin-bottom: 50px;
+    margin-bottom: 15px;
+}
+h2 {
+	font-size: 32px;
+	color: white;
+	font-family: Source-Serif-Pro;
+	width: 975px;
+	margin: auto;
+	margin-bottom: 50px;
 }
 #banner .wrapper a{
-    font-size: 16px;
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    border: 2px solid white;
-
+	font-size: 16px;
+	color: white;
+	border: 2px solid white;
+	text-decoration: none;
+	padding: 10px;
+	margin-left: 405px;
+}
+#banner p {
+	font-size: 20px;
+	color: white;
+	text-align: left;
+	width: 975px;
+	margin: auto;
+	margin-bottom: 50px;
 }
 main .wrapper{
     display: flex;
@@ -224,13 +258,12 @@ p+a {
 	float: right;
 }
 article {
-	background-color: rgb(221, 217, 217);
+	background-color:rgb(221, 217, 217);
 	margin-bottom: 30px;
 	text-align: left;
 	line-height: 1.5;
 	overflow: auto;
 	margin-top: 40px;
-	padding: 10px;
 }
 
 article li:nth-child(even):before {
