--- a/Project Website/css/Start.css
+++ b/Project Website/css/Start.css
@@ -79,7 +79,11 @@ main{
 
 }
 
-
+@media screen and (max-width: 1440px){
+	.aboutus{
+		text-align: center;
+	}
+}
 
 .orderinfo a{
 	text-decoration: none;
